# VStream

./: CMakeLists.txt
Client/: CMakeLists.txt
Client/include/: mclient.hpp
Client/qml/: client.qml
Client/src/: client.cpp  mclient.cpp
Server/: CMakeLists.txt
Server/include/: mserver.hpp
Server/qml/: server.qml
Server/src/: mserver.cpp  server.cpp
Utils/: CMakeLists.txt
Utils/include/: utils.hpp
Utils/src/: utils.cpp
